update Header.jsx: criado inicio da selecao de idioma

--- a/frontend/react-app/src/Pages/style.css
+++ b/frontend/react-app/src/Pages/style.css
@@ -3,6 +3,11 @@ a {
   text-decoration: none !important;
 }
 
+/* Utilities */
+.pointer {
+  cursor: pointer;
+}
+
 /* Criar-conta */
 .card { 
   max-Width: 600px;
